--- a/js-features/countdown/task.html
+++ b/js-features/countdown/task.html
@@ -12,6 +12,15 @@
     <div id="status">
         До окончания конкурса осталось секунд: <span id="timer">59</span>
     </div>
+    <div id="status2">
+        Дополнительное задание #1:<br>
+        Успеть перерезать <b>зелёный</b> провод за: <span id="wiretimer">04:25:19</span>
+    </div>
+    <div id="status3">
+        Дополнительное задание #2:<br>
+        Файл начнёт скачиваться через: <span id="filetimer">65</span> cекунд<br>
+        Или кликните сами: <a id="filelink" href="https://all-the-books.ru/download_book/00ae0503fb3889d7e9faf30443b9fde3/" download target="_blank">Файл</a>
+    </div>
     <script src="task.js"></script>
 </body>
 </html>
