--- a/document-structure/cart/task.html
+++ b/document-structure/cart/task.html
@@ -11,14 +11,10 @@
 <body>
     <!-- корзина -->
     <div class="cart">
-        <div class="cart__title">Корзина</div>
-        <div class="cart__products">
-            <!-- разметка добавленного в корзину товара -->
-            <!--<div class="cart__product" data-id="1">
-                <img class="cart__product-image" src="image.png">
-                <div class="cart__product-count">20</div>
-            </div>-->
+        <div class="cart__title">Корзина
+            <a href="#" id="cart__clear">Очистить корзину</a>
         </div>
+        <div class="cart__products"></div>
     </div>
     <!-- список товаров -->
     <div class="products">
